loki/network-policy-loki-allow-egress-kube-apiserver-cilium.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: loki-allow-egress-kube-apiserver-cilium
  namespace: loki
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: loki
  egress:
    - toEntities:
        - kube-apiserver
    - toServices:
        - k8sService:
            namespace: default
            serviceName: kubernetes
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
