loki/network-policy-loki-allow-ingress-log-clients.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: loki-allow-ingress-log-clients
  namespace: loki
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: single-binary
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: bitwarden
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: nextcloud
      ports:
        - protocol: TCP
          port: 3100
