loki/network-policy.yaml
---
# Network policy for Loki namespace.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: loki-default-deny
  namespace: loki
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: loki-allow-ingress-from-monitoring
  namespace: loki
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 3100
        - protocol: TCP
          port: 3500
        - protocol: TCP
          port: 9150
        - protocol: TCP
          port: 9095
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: loki-allow-ingress-log-clients
  namespace: loki
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: single-binary
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: bitwarden
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: nextcloud
      ports:
        - protocol: TCP
          port: 3100
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: loki-allow-ingress-intra-namespace
  namespace: loki
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: loki
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: loki-allow-egress-intra-namespace
  namespace: loki
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: loki
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: loki-allow-egress-dns
  namespace: loki
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: loki-allow-egress-s3-https
  namespace: loki
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: single-binary
  policyTypes:
    - Egress
  egress:
    # Required for S3 object storage endpoint (HTTPS).
    - to:
        - ipBlock:
            cidr: 81.19.4.105/32
      ports:
        - protocol: TCP
          port: 443
